# src/app/Http/Requests/Hospital/QueryParamVetRequest.php
@@ -1,0 +1,25 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Http\Requests\Hospital;
+
+use App\Http\Requests\Base\ApiRequest;
+
+class QueryParamVetRequest extends ApiRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'route_params.vet' => 'required|uuid|exists:vets,uuid',
+        ];
+    }
+}
